[gd_scene load_steps=2 format=3 uid="uid://didumedngv3ih"]

[ext_resource type="Script" path="res://scripts/UI/pause_menu.gd" id="1_ks0km"]

[node name="pause_menu" type="CanvasLayer"]
script = ExtResource("1_ks0km")

[node name="bg_overlay" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.482353)

[node name="menu_holder" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -35.0
offset_top = -50.5
offset_right = 35.0
offset_bottom = 50.5
grow_horizontal = 2
grow_vertical = 2

[node name="Resume" type="Button" parent="menu_holder"]
layout_mode = 2
text = "Resume"

[node name="Save" type="Button" parent="menu_holder"]
layout_mode = 2
text = "Save"

[node name="Quit" type="Button" parent="menu_holder"]
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="menu_holder/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="menu_holder/Save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="menu_holder/Quit" to="." method="_on_quit_pressed"]
